--- a/war/create-course.html
+++ b/war/create-course.html
@@ -26,7 +26,7 @@
             <ul>
               <li><a href='assign-prof.html'>Assign Professor</a></li>
               <li><a href='assign-ta.html'>Assign TA</a></li>
-              <li><a href='create-course.html'>Create a Course</a></li>
+              <li><a href='create-course?course=math'>Create a Course</a></li>
               <li><a href='create-lab-dis.html'>Create Lab/Discussion</a></li>
 
               <li><a href='courses.html'>View All Courses</a></li>
@@ -194,6 +194,7 @@
 		</label>
 		<div class='submit'><input type="button" class="button" value="Save" /></div>
 	</form>
+	</div>
 </div>
 </body>
 </html>
