--- a/war/index.html
+++ b/war/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="refresh" content="0; URL=login.html">
+<meta http-equiv="refresh" content="0; URL=login">
 </head>
 </html>
