--- a/war/edit-info.html
+++ b/war/edit-info.html
@@ -49,7 +49,7 @@
               </ul>
            </li>
            <li><a class='selected' href='edit-info.html'>Edit Info</a></li>
-           <li><a href='user-search.html'>Search User</a></li>
+					<!--  <a href='user-search.html'>Search User</a></li>--><li>
         </ul>
       </div>
     </div>
