Search User Progress
Implemented request/response and Form in UserSearchServlet.
Couple of adds to Datastore.java and Form.java.
App functions as before, Search User will be active, Search button
function NOT ready.

--- a/war/views.html
+++ b/war/views.html
@@ -48,7 +48,7 @@
               </ul>
            </li>
            <li><a href='edit-info.html'>Edit Info</a></li>
-					<!--  <a href='user-search.html'>Search User</a></li>--><li>
+					<li><a href='user-search.html'>Search User</a></li><li>
         </ul>
       </div>
     </div>
