--- a/war/edit-info.html
+++ b/war/edit-info.html
@@ -16,7 +16,7 @@
       <div class='settings'><a href='add-user.html'>Add New User</a><a href='index.html'>Logout</a></div>
         <div class='uwmlogo'> 
             <a href='https://www4.uwm.edu/' target='_new'>
-                <img src='images/logo_uwm.png'>
+                <img src='images/logo_uwm.png'><img>
             </a>
         </div>
         <div class='header-title'>Edit Your Information</div>
@@ -49,7 +49,7 @@
               </ul>
            </li>
            <li><a class='selected' href='edit-info.html'>Edit Info</a></li>
-					<li><a href='user-search.html'>Search User</a></li><li>
+					<!--  <a href='user-search.html'>Search User</a></li>--><li>
         </ul>
       </div>
     </div>
@@ -78,7 +78,7 @@
 		</div>
 
 		<div id='contact-form2'>
-			Office Location<br/><input type='text' name='office' size='35' value='EMS 944442'><br/>
+			Office Location<br/><input type='text' name='office' size='35' value='EMS 942'><br/>
 			Alt Phone<br/><input type='text' name='area' size='3' placeholder='XXX-XXX-XXXX'>
 		</div>
 		
