LOGIN WITH FIRST PART OF EMAIL
login with epantherID, add new user takes in an email
PASSWORD IS LAST NAME
admin.pass & pass is still working right now so use that to get
yourself up and running

--- a/war/add-user.html
+++ b/war/add-user.html
@@ -64,6 +64,10 @@
 					<input id='lastName' type='text' name='lastName' placeholder='' />
 				</label>
 				<label>
+					<span>Email: </span>
+					<input id='email' type='email' name='email' placeholder='xxx@uwm.edu' />
+				</label>				
+				<label>
 					<span>Access Level: </span>
 					<select name='access'>
 						<option value='3'>Administrator</option>
